service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-monitoring-13
spec:
  selector:
    app: flask-monitoring-13
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
