ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-monitoring-11
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
#    spec.ingressClassName: nginx
    ingress.kubernetes.io/use-port-in-redirects: "true"
spec:
  rules:
    - host: flask-monitoring-11-dev-arctic.bamdns.local      # Domain name ที่จะใช้เข้าถึง
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: flask-monitoring-11  # ชื่อ service ที่จะเชื่อมต่อ
                port:
                  number: 80                # Port ที่ service เปิดให้เข้าถึง
